<resources>
    <string name="app_name">Vehicle Cost</string>
    <string name="bottom_nav_first_text">Statystyki</string>
    <string name="bottom_nav_second_text">Historia</string>
    <string name="bottom_nav_third_text">Kalkulator</string>
    <string name="label_statictics">Statystyki</string>
    <string name="label_calculator">Kalkulator</string>
    <string name="label_history">Historia</string>
    <string name="stat_header_fuel">Paliwo</string>
    <string name="stat_refueled_text">Zatankowano:</string>
    <string name="stat_paid_text">Wydano:</string>
    <string name="stat_last_fuel_price_text">Ostatnia cena paliwa:</string>
    <string name="stat_header_repair">Naprawy</string>
    <string name="stat_sum_cost_repair">Łącznie wydano:</string>
    <string name="stat_greatest_expense_repair">Największy wydatek:</string>
    <string name="stat_latest_cost_repair">Ostatni wydatek:</string>
    <string name="rb_fuel_text">Paliwo</string>
    <string name="rb_repair_text">Naprawy</string>
    <string name="add_text">Dodaj</string>
    <string name="edit_text">Edytuj</string>
    <string name="remove_text">Usuń</string>
    <string name="content_description_fab_add_refuel">Dodaj tankowanie</string>
    <string name="content_description_fab_add_repair">Dodaj naprawę</string>
    <string name="text_input_hint_mileage">Przebieg (km)</string>
    <string name="editText_hint_date">Data</string>
    <string name="label_of_date">Data</string>
    <string name="loading">Ładowanie</string>
    <string name="label_time">Czas</string>
    <string name="hint_price_per_liter">Cena za litr</string>
    <string name="hint_cost">Koszt</string>
    <string name="hint_amount_of_fuel">Ilość paliwa</string>
    <string name="hint_type_of_fuel">Typ paliwa</string>
    <string name="switch_full_refueled">Tankowanie do pełna</string>
    <string name="button_add_new_refuel">Dodaj tankowanie</string>
    <string name="title">Tytuł</string>
    <string name="comments">Uwagi</string>
    <string name="btn_add_new_repair">Dodaj naprawę</string>
    <string name="add_refuel_button_text">DODAJ TANKOWANIE</string>
    <string name="edit_refuel_button_text">EDYTUJ TANKOWANIE</string>
    <string name="last_value_of_mileage">Ostatnia wartość: %1$s km</string>
    <string name="add_repair_button_text">DODAJ NAPRAWĘ</string>
    <string name="edit_repair_button_text">EDYTUJ NAPRAWĘ</string>
    <string name="title_new_refuel">Nowe tankowanie</string>
    <string name="title_new_repair">Nowa naprawa</string>
    <string name="title_edit_refuel">Edycja tankowania</string>
    <string name="title_edit_repair">Edycja naprawy</string>
    <string name="removed_text">Usunięto</string>
    <string name="restore_text">Przywróć</string>
    <string name="refueled_result_text">"Zatankowano: "</string>
    <string name="liters_result_text">" litrów"</string>
    <string name="expected_range_is_result_text">"Przewidywany zasięg wynosi: "</string>
    <string name="km_result_text">" km"</string>
    <string name="required_amount_of_fuel_result_text">"Wymagana ilość paliwa: "</string>
    <string name="cost_of_travel_result_text">"Koszt podróży wyniesie: "</string>
    <string name="zloty_result_text">" zł"</string>
    <string name="per_person_result_text">"Na osobę: "</string>
    <string name="avg_consumtion_result_text">"Srednie spalanie wynosi: "</string>
    <string name="price_per_100km_result_text">"Cena za przejechanie 100km wynosi: "</string>
    <string name="refueled_added_message">Tankowanie dodanie</string>
    <string name="refueled_updated_message">Tankowanie zaktualizowane</string>
    <string name="repair_added_message">Naprawa dodana</string>
    <string name="repair_updated_message">Naprawa zaktualizowana</string>
    <string name="fuel_consumption">SPALANIE</string>
    <string name="costs">KOSZTY</string>
    <string name="range">ZASIĘG</string>
    <string name="refueled_hint">Zatankowano</string>
    <string name="traveled_kilometers_hint">Przejechane kilometry</string>
    <string name="price_per_liter_hint">Cena za litr</string>
    <string name="avg_consumption_hint">Srednie spalanie</string>
    <string name="number_of_people_hint">Liczba osób</string>
    <string name="paid_hint">Zapłacono</string>
    <string name="title_new_vehicle">Nowy pojazd</string>
    <string name="title_manage_vehicle">Zarządzaj pojazdami</string>
    <string name="vehicle_added_message">Pojazd dodany</string>
    <string name="vehicle_updated_message">Pojazd zaktualizowany</string>
    <string name="add_new_vehicle_text">Dodaj nowy pojazd</string>
    <string name="vehicle_name_hint">Nazwa pojazdu</string>
    <string name="choose_vehicle">Wybierz pojazd</string>
    <string name="default_vehicle">Mój Pojazd</string>

    // Errors messages
    <string name="default_error_message">Coś poszło nie tak. Spróbuj ponownie</string>
    <string name="message_about_missing_refueled_data">Brak danych o zatankowanym paliwie</string>
    <string name="message_about_missing_km_traveled_data">Brak danych o przejechanych kilometrach</string>
    <string name="message_about_missing_price_per_liter_data">Brak danych o cenie za litr paliwa</string>
    <string name="message_about_missing_avg_consumption_data">Brak danych o średnim spalaniu</string>
    <string name="message_about_missing_num_of_people_data">Brak danych o liczbie osób</string>
    <string name="message_about_missing_paid_data">Brak danych o zapłaconej kwocie</string>
    <string name="required_fields_cannot_be_empty_text">Wymagane pola nie mogą być puste</string>
    <string name="mileage_cannot_be_less_than_previous">Przebieg nie może być niższy od poprzedniego</string>
    <string name="insert_edit_vehicle_error_message">
        Wystąpił błąd. Upewnij się, że nazwa pojazdu nie jest już używana.
    </string>
    <string name="delete_current_selected_vehicle_error_message">
        Nie można usunąć aktualnie wybranego pojazdu gdyż jest on pojazdem głównym.
    </string>

    // Statistics strings
    <string name="numerical_value_with_unit_of_volume">%1$s %2$s</string>
    <string name="numerical_value_with_currency">%1$s %2$s</string>

    // Content descriptions
    <string name="content_description_fuel_icon">ikona_paliwa</string>
    <string name="content_description_car_icon">ikona_auta</string>
    <string name="content_description_money_icon">ikona_pieniędzy</string>
    <string name="content_description_people_icon">ikona_ludzi</string>
    <string name="content_description_payment_icon">ikona_platnosci</string>

    <string-array name="type_of_fuel">
        <item>ON</item>
        <item>PB</item>
        <item>LPG</item>
    </string-array>
</resources>